2007-10-21  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-account-chooser.c:
	* libempathy-gtk/empathy-contact-dialogs.c:
	* libempathy-gtk/empathy-contact-widget.c:
	* libempathy-gtk/empathy-contact-widget.h:
	* libempathy-gtk/empathy-accounts-dialog.c: To know if an account is
	connected, use mission_control_get_connection_status() instead of
	mission_control_get_connection(). Update account chooser if an account's
	status changes or if it get removed.
	Move account chooser filter func for add-contact's window from
	EmpathyContactWidget to EmpathyContactDialogs.

2007-10-19  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-accounts-dialog.c: Update Enable/Disable
	button when "account-enabled" or "account-disabled" are emitted on
	McAccountMonitor. Set tooltip on protocol icon with the profile's
	display name.

2007-10-19  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-profile-chooser.c:
	* libempathy-gtk/empathy-profile-chooser.h:
	* libempathy-gtk/empathy-accounts-dialog.c: set unsensitive the add
	button if there is no profile installed and tell the user to install
	some connection managers.

	* libempathy-gtk/empathy-ui-utils.c: Fix indentation.

2007-10-19  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-chat-window.c: If EmpathyChat object does not
	exist when DnD a contact, create one. Fixes bug #483168.

2007-10-19  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-status-icon.c: Fix crash when iconifying main
	window if it's already hiden.

2007-10-19  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-group-chat.c:
	* libempathy/empathy-tp-chatroom.c:Don't accept invitation if we are
	not invited.

	* libempathy-gtk/empathy-status-icon.c: Correctly toggle visibility
	with ALT-F4 on the main windows.

2007-10-18  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy/empathy-log-manager.c:
	* libempathy/empathy-log-manager.h: